# mastanJ

./: .coverage  .gitignore  README.md  assignment_2_gen_AI_use.txt  graded_assignment.py  main copy.py  main.py  not-related-to-assignment.ipynb  pyproject.toml  requirements.txt  tutorials.ipynb
src/: bc.py  code_review_1v2_p2_k_e_global.txt  element.py  frame.py  main.py  math_utils.py  node.py  sf.ipynb  shape_functions.py  shape_functions3.py  tutorials.ipynb
src/jax/: element.py  frame.py  node.py  tutorials.ipynb
src/mastanJ.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_element.py  test_frame.py  test_node.py  test_shape_functions.py
tests/jax/: test_node.py
