[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mastanJ"
version = "0.1.0"
authors = [
  { name="Erfan Hamdi", email="Erfan@bu.edu" },
]
description = "ME700-assignment-2"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",

]