[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mastanJ"
version = "0.1.1"
authors = [
  { name="Erfan Hamdi", email="Erfan@bu.edu" },
]
description = "ME700-assignment-2"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pytest",
    "pytest-cov",

]